--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -460,9 +460,9 @@ ul.releases_discography_button
  {
  border-radius:200px;
  margin-top:10px;
- }
+}
 
-.artists_pictures img 
+img.artists_pictures
 {
   height:220px;
   width:220px;
@@ -1000,6 +1000,10 @@ margin:2px; }
   margin:10px;
 }
 
+.artists_show
+{
+     min-height:240px;
 
+}
 
 
