--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1,26 +1,26 @@
 .triangle img {margin-top:-13px;margin-left:-4px;}
 
- .artists h1,
- .releases h1,
- .category_infos h1
- {
-   font-family: 'Jockey One', sans-serif;
-   font-weight:lighter;
-   background-repeat:repeat;
-   display:inline;
-   text-transform:uppercase;
-   font-size:27px;
-   font-size:2.7rem;
-   height:30px;
-   padding:5px 0px 10px 13px;
-   margin-top:10px;
-   margin-left:-5px;
-    background-image:url(../pics/pattern/pat-bg.png);
+.artists h1,
+.releases h1,
+.category_infos h1
+{
+ font-family: 'Jockey One', sans-serif;
+ font-weight:lighter;
+ background-repeat:repeat;
+ display:inline;
+ text-transform:uppercase;
+ font-size:27px;
+ font-size:2.7rem;
+ height:30px;
+ padding:5px 0px 10px 13px;
+ margin-top:10px;
+ margin-left:-5px;
+ background-image:url(../pics/pattern/pat-bg.png);
  background-repeat:repeat;
  background-color:#000;
  color:#FFF;
- }
- /* TYPO */
+}
+/* TYPO */
 
 @font-face 
 {
@@ -118,8 +118,8 @@ html
 
 /* HEADER */
 
- .header 
- {
+.header 
+{
   background-image:url("../pics/bg_header/01.gif");
   background-position: center center;
   background-repeat: repeat;
@@ -130,7 +130,7 @@ html
 
 
 .header_nav_2
- {
+{
   margin-top:12px!important;
 }
 
@@ -167,9 +167,9 @@ html
  color: #29ABE2;
  text-decoration:none;
  padding:2px;
-font-family: 'Tempesta', sans-serif;
-font-size:8px;
-font-size:0.8rem;
+ font-family: 'Tempesta', sans-serif;
+ font-size:8px;
+ font-size:0.8rem;
 
 }
 
@@ -212,56 +212,57 @@ font-size:0.8rem;
 }
 
 
-  .header_nav_3_button_donate a
-  {
-    color:#ea1D78;
-    opacity:0.9;
-  }
+.header_nav_3_button_donate a
+{
+  color:#ea1D78;
+  opacity:0.9;
+}
 
-  .header_nav_3_button_donate a:hover  {opacity:1;color:#FFF;}
+.header_nav_3_button_donate a:hover  {opacity:1;color:#FFF;}
 
- 
- .header_news_1_content,.header_news_2_content 
+
+.header_news_1_content,.header_news_2_content 
+{
+ font-family: 'Jockey One', sans-serif;
+ text-align:right;
+ margin-top:112px;}
+
+ .header_news_1_content a,.header_news_2_content a  
  {
-   font-family: 'Jockey One', sans-serif;
-   text-align:right;
-   margin-top:112px;}
-
-   .header_news_1_content a,.header_news_2_content a  
-   {
-     text-decoration:none;
-   }
-
-   .header_news_1_content h1 
-   {
-    margin-bottom:-20px;
-    margin-right:13px;
-  }
-
-  .header_news_1_content h1 a 
-  {
-   color:#FFF;
-   font-weight:lighter;
-   font-size:60px;
-   font-size:6rem;
- }
- 
- .header_news_1_content h2 a 
- {
-   color:#fced20;
-   font-weight:lighter;
-   font-size:48px;
-   font-size:4.8rem
+   text-decoration:none;
  }
 
+ .header_news_1_content h1 
+ {
+  margin-bottom:-20px;
+  margin-right:13px;
+}
 
-  .header_news_2
-  {
-   background-color:#000;
-   opacity:0.95;
-   padding-top:10px;
-   min-height:80px;
-  border-right:2px solid #28abe3; }  
+.header_news_1_content h1 a 
+{
+ color:#FFF;
+ font-weight:lighter;
+ font-size:60px;
+ font-size:6rem;
+}
+
+.header_news_1_content h2 a 
+{
+ color:#fced20;
+ font-weight:lighter;
+ font-size:48px;
+ font-size:4.8rem
+}
+
+
+.header_news_2
+{
+ background-color:#000;
+ opacity:0.95;
+ padding:10px 0px 0px 0px;
+ margin-bottom:0px;
+ border-right:2px solid #28abe3; 
+height:125px;}  
 
  .header_news_2_nav
  {
@@ -269,10 +270,11 @@ font-size:0.8rem;
   float:right;
   margin-top:-19px;
   font-family: 'Tempesta', sans-serif;
-  opacity:0.5;
 }
 
-.header_news_2_nav:hover 
+.header_news_2_nav img 
+{  opacity:0.5;}
+.header_news_2_nav img:hover 
 {
   opacity:1;
 }
@@ -280,7 +282,7 @@ font-size:0.8rem;
 .header_news_2_nav a 
 {
   padding:0px 2px 0px 2px;
-    font-family: 'Tempesta', sans-serif;
+  font-family: 'Tempesta', sans-serif;
 
 }
 
@@ -330,17 +332,17 @@ font-size:0.8rem;
 /* DISCOGS */
 
 .releases_discography
- {
-   background-image:url(../pics/pattern/pat-bg.png);
-   background-repeat:repeat;
-   background-color:#000;
-   padding:30px 0px 40px 0px;
-   margin-top:-7px;
-   }
+{
+ background-image:url(../pics/pattern/pat-bg.png);
+ background-repeat:repeat;
+ background-color:#000;
+ padding:30px 0px 40px 0px;
+ margin-top:-7px;
+}
 
 
- .releases_discography_number_default 
- {
+.releases_discography_number_default 
+{
   background-image:url(../pics/releases/img-release-default.png);
   height:290px;
   width:220px;
@@ -358,6 +360,7 @@ font-size:0.8rem;
 .releases_discography_number_first,.artists_show_first
 {
   margin-left:0px!important;
+  margin-right:10px;
 }
 .releases_discography_number h1 
 {
@@ -372,14 +375,14 @@ font-size:0.8rem;
   width:68px;
   position: absolute;
   margin-top:20px;
-    background-image:url(../pics/icon/nouveau.png);
-    font-family: 'Tempesta', sans-serif;
-    font-size:8px;
-    font-size:0.8rem;
-    color:#FFF;
-    text-transform:uppercase;
-    font-weight:bold;
-   padding-left:8px;
+  background-image:url(../pics/icon/nouveau.png);
+  font-family: 'Tempesta', sans-serif;
+  font-size:8px;
+  font-size:0.8rem;
+  color:#FFF;
+  text-transform:uppercase;
+  font-weight:bold;
+  padding-left:8px;
 
 }
 
@@ -404,7 +407,7 @@ font-size:0.8rem;
 .open_artists_listing_releases h2, 
 {
   margin-top:-25px!important;
-   margin-left:-4px;
+  margin-left:-4px;
 
 }
 .releases_discography_number h1 a,.open_artists_listing_releases h1 a
@@ -461,17 +464,17 @@ ul.releases_discography_button
 .releases_discography_button li a:hover 
 {
  color:#000;
-  background-color:#29ABE2;
+ background-color:#29ABE2;
 }
 /* Artists */
 
 
-  .artists
-  {
-    background-color:#000;
-    background-image:url(../pics/pattern/pat-bg.png);
-    background-repeat:repeat;
-  }  
+.artists
+{
+  background-color:#000;
+  background-image:url(../pics/pattern/pat-bg.png);
+  background-repeat:repeat;
+}  
 
 .artists_listing_all,.open_releases,.open_artists
 {
@@ -485,18 +488,18 @@ ul.releases_discography_button
 .open_releases,.open_artists
 {
   margin-top:-8px;
- border-top:10px solid #000;
-background-color:#FFF;}
+  border-top:10px solid #000;
+  background-color:#FFF;}
 
-.artists_pictures
+  .artists_pictures
+  {
+   border-radius:200px;
+   margin-top:10px;
+
+ }
+
+ img.artists_pictures
  {
- border-radius:200px;
- margin-top:10px;
-
-}
-
-img.artists_pictures
-{
   height:220px;
   width:220px;
 }
@@ -529,31 +532,31 @@ float:right;
   top:103px;
   font-size:19px;
   font-size:1.9rem;
-    background-color:#000;
+  background-color:#000;
   padding:3px 9px 3px 3px;  
   display: block;
   z-index:2000;
- left:10px}
-.artists h1
-{
- background-color:#f2f2f2;
- color:#000;
-}
+  left:10px}
+  .artists h1
+  {
+   background-color:#f2f2f2;
+   color:#000;
+ }
 
 
 
-  .tags h1{
+ .tags h1{
   line-height:24px;
   position:relative;
 
-  } 
+} 
 
 .tags h1{
  background-color:#FFF;
  color:#000;
-  text-decoration:none;
+ text-decoration:none;
  
-  } 
+} 
 .tags h1:after{
   content:"";
   float:left;
@@ -562,11 +565,11 @@ float:right;
   width:0;
   height:0;
   border-color: transparent transparent  transparent #FFF ;
-margin-left:5px;
+  margin-left:5px;
   border-style:solid;
   border-width: 40px 40px 0px 40px ;    
-  } 
-  
+} 
+
 
 
 
@@ -641,7 +644,7 @@ margin-left:5px;
 {
  margin-left:20px;
  width:276px;
- }
+}
 
 
 /* FOOTER */
@@ -655,37 +658,37 @@ margin-left:5px;
 }
 
 .footer_content p  {color:#FFF;}
- 
- .footer_content h1, .footer_content h2 
- {
+
+.footer_content h1, .footer_content h2 
+{
   font-weight:normal;
   text-transform:uppercase;
   font-family: 'Jockey One', sans-serif;
 } 
 
-  .footer_content h1 
-  {
-   color:#FFF;
-   background-color:#000;
-   background-image:url(../pics/pattern/pat-bg.png);
-   background-repeat:repeat;
-   display:inline;
-   padding:2px 4px 2px 4px;
-   font-size:20px;
-   font-size:2rem;
- }
+.footer_content h1 
+{
+ color:#FFF;
+ background-color:#000;
+ background-image:url(../pics/pattern/pat-bg.png);
+ background-repeat:repeat;
+ display:inline;
+ padding:2px 4px 2px 4px;
+ font-size:20px;
+ font-size:2rem;
+}
 
-  .footer_content h2
- {
+.footer_content h2
+{
   color:#FFF;
   font-size:15px;
   font-size:1.5rem;
   opacity:0.7;
   margin:10px 0px 0px 0px;
- } 
+} 
 
- .footer_links_1 ul, li, .footer_links_2 ul, li 
- {
+.footer_links_1 ul, li, .footer_links_2 ul, li 
+{
   list-style-type:none;
 }
 
@@ -712,9 +715,9 @@ margin-left:5px;
 
 .footer_content p a 
 {
-    color:#29ABE2;
-    text-decoration:none;
-    opacity:0.7;
+  color:#29ABE2;
+  text-decoration:none;
+  opacity:0.7;
 }
 
 .footer_content p a:hover 
@@ -748,7 +751,7 @@ ul.footer_nav_1
 .footer_button_top
 {
  margin-top:-49px!important;
-float:right;
+ float:right;
  background-image:url(../pics/pattern/pat-foot.png);
  background-repeat:repeat;
  background-color:#000;
@@ -757,19 +760,19 @@ float:right;
 .footer_content input,.footer_content textarea  
 {
   border:0px;
-   background-image:url(../pics/pattern/pat-foot.png);
- background-repeat:repeat;
- background-color:#0B1D27;
+  background-image:url(../pics/pattern/pat-foot.png);
+  background-repeat:repeat;
+  background-color:#0B1D27;
 }
 
 .footer_content input.valid 
 {
   background-color:#000!important;
   color:#FFF;
-   background-image:none;
- background-repeat:repeat;
- float:right;
- margin-top:-10px;
+  background-image:none;
+  background-repeat:repeat;
+  float:right;
+  margin-top:-10px;
 }
 /* OPEN RELEASE */
 
@@ -783,12 +786,12 @@ float:right;
 }
 
 h1.open_releases_catalog , h2.open_releases_artist, h3.open_releases_album, h3.open_releases_title, h1.open_releases_title, h2.open_releases_title, h1.open_artists_name, h2.open_artists_title
- {
-   font-weight:normal;
-   text-transform:uppercase;
-   font-family: 'Jockey One', sans-serif;
+{
+ font-weight:normal;
+ text-transform:uppercase;
+ font-family: 'Jockey One', sans-serif;
 
- }
+}
 
 
 h1.open_releases_title, h2.open_releases_title, h3.open_releases_title,h2.open_artists_title
@@ -839,10 +842,10 @@ h2.open_releases_artist a:hover
 h3.open_releases_album
 {
 
-   color:#b2b2b2;
-  font-size:33px;
-  font-size:3.3rem;
-  margin-top:-36px;
+ color:#b2b2b2;
+ font-size:33px;
+ font-size:3.3rem;
+ margin-top:-36px;
 }
 
 
@@ -920,81 +923,81 @@ ul.open_releases_button, ul.open_artists_button
 {
   margin-top:-40px;
   margin-bottom:0px;
-text-align:right;}
+  text-align:right;}
 
-.open_releases_button li, .open_artists_button li 
-{
+  .open_releases_button li, .open_artists_button li 
+  {
 
-  background-color:transparent;
-  list-style-type:none;
-display:inline;
-padding:0px;
-margin: 0px 2px 0px 2px;
+    background-color:transparent;
+    list-style-type:none;
+    display:inline;
+    padding:0px;
+    margin: 0px 2px 0px 2px;
 
-}
+  }
 
-.open_releases_button_left, .open_releases_button_right , .open_releases_button_close
-{
-  background-repeat:no-repeat;
-max-width:35px;
-max-height:35px;
-color:transparent;
-font-size:40px;
-}
+  .open_releases_button_left, .open_releases_button_right , .open_releases_button_close
+  {
+    background-repeat:no-repeat;
+    max-width:35px;
+    max-height:35px;
+    color:transparent;
+    font-size:40px;
+  }
 
-.open_releases_button_left 
-{
+  .open_releases_button_left 
+  {
     background-image:url("../pics/button/release_retour.png");
 
-}
+  }
 
-.open_releases_button_left:hover
-{
+  .open_releases_button_left:hover
+  {
     background-image:url("../pics/button/release_retour-hover.png");
-}
+  }
 
-.open_releases_button_right
-{
+  .open_releases_button_right
+  {
     background-image:url("../pics/button/release_suivant.png");
 
-}
+  }
 
-.open_releases_button_right:hover
-{
+  .open_releases_button_right:hover
+  {
     background-image:url("../pics/button/release_suivant_hover.png");
-}
+  }
 
-.open_releases_button_close
-{
+  .open_releases_button_close
+  {
     background-image:url("../pics/button/release_close.png");
 
-}
+  }
 
-.open_releases_button_close:hover
-{
+  .open_releases_button_close:hover
+  {
     background-image:url("../pics/button/release_close-hover.png");
-}
+  }
 
-.open_releases_button_left a,.open_releases_button_right a, .open_releases_button_close a
-{
-  color:transparent!important;
-}
-.open_releases_buy 
-{
-  background-color:#1a1a1a;
-  color:#FFF;
-  font-weight:bold;
-  padding:5px;
-  min-height:20px;
-  margin-top:-12px;
-  font-size:12px;
-  font-size:1.2rem;
-}
+  .open_releases_button_left a,.open_releases_button_right a, .open_releases_button_close a
+  {
+    color:transparent!important;
+  }
+  .open_releases_buy 
+  {
+    background-color:#1a1a1a;
+    color:#FFF;
+    font-weight:bold;
+    padding:5px;
+    min-height:20px;
+    margin-top:-12px;
+    font-size:12px;
+    font-size:1.2rem;
+  }
 
-.open_releases_buy:hover
-{
-  background-color: #29ABE2;
-}
+  .open_releases_buy:hover
+  {
+    background-color: #29ABE2;
+  }
   .open_releases_buy img 
   {
     padding:0px 2px 0px 2px;
@@ -1028,59 +1031,59 @@ font-size:40px;
     padding:5px;
     font-size:10px;
     font-size:1em;
-font-family: arial, verdana, sans-serif; 
-margin:2px; }
+    font-family: arial, verdana, sans-serif; 
+    margin:2px; }
 
- .open_releases_download a 
- {
+    .open_releases_download a 
+    {
       background-color:#e6e6e6;
-              padding:5px;
+      padding:5px;
 
 
- }
-  .open_releases_download a:hover 
-  {
-    background-color:#000;
-    color:#FFF; 
-        padding:5px;
- }
+    }
+    .open_releases_download a:hover 
+    {
+      background-color:#000;
+      color:#FFF; 
+      padding:5px;
+    }
 
 
 
-  ul.open_releases_share_button
-  {
-    margin-bottom:-20px;
-  }
-  .open_releases_share_button li 
-  {
-    display: inline;
-    margin:2px 2px 2px 2px;
-    font-size:14px;
-    font-size:1.4rem;
-            color:#000;
-            font-weight:bold;
-  text-transform:uppercase;
-    font-family: 'Jockey One', sans-serif;
+    ul.open_releases_share_button
+    {
+      margin-bottom:-20px;
+    }
+    .open_releases_share_button li 
+    {
+      display: inline;
+      margin:2px 2px 2px 2px;
+      font-size:14px;
+      font-size:1.4rem;
+      color:#000;
+      font-weight:bold;
+      text-transform:uppercase;
+      font-family: 'Jockey One', sans-serif;
 
-  }
+    }
 
- .open_releases_share_button img 
-{
-  margin-top:-6px;
-  opacity:0.6;
-}
+    .open_releases_share_button img 
+    {
+      margin-top:-6px;
+      opacity:0.6;
+    }
 
-.open_releases_share_button img:hover 
-{
-  opacity:1;
-}
-/* A TRIER */
+    .open_releases_share_button img:hover 
+    {
+      opacity:1;
+    }
+    /* A TRIER */
 
- .releases,.category_infos  
-  {
-   background-color:transparent;
-   margin-top:-40px!important;
- }
+    .releases,.category_infos  
+    {
+     background-color:transparent;
+     margin-top:-40px!important;
+   }
 
 
 /* .artists h1,
@@ -1097,34 +1100,34 @@ margin:2px; }
    text-transform:uppercase;
    font-size:27px;
    font-size:2.7rem
- }*/
+   }*/
 
- .infos_button_top,.footer_button_top 
+   .infos_button_top,.footer_button_top 
+   {
+    float:right;r
+    padding:0px;
+    margin:0px 0px 0px 0px;
+    height:20px;
+    width:20px;
+    text-align:center;
+  }
+
+  .releases h1,
+  .category_infos h1
+  {
+   background-color:#000;
+   color:#FFF;
+ }
+
+ .releases_discography_number,.artists_show
  {
-  float:right;r
-  padding:0px;
-  margin:0px 0px 0px 0px;
-  height:20px;
-  width:20px;
-  text-align:center;
-}
-
-.releases h1,
-.category_infos h1
-{
- background-color:#000;
- color:#FFF;
-}
-
-.releases_discography_number,.artists_show
-{
   font-weight:none;
   margin:10px;}
 
-.artists_show
-{
-     min-height:230px;
-}
+  .artists_show
+  {
+   min-height:230px;
+ }
 
 
 
@@ -1141,7 +1144,7 @@ h1.open_artists_name
 
 .open_artists_pictures
 {
-    margin-right:30px;
+  margin-right:30px;
 
 }
 
@@ -1157,6 +1160,7 @@ h1.open_artists_name
   width:220px;
   background-color:#FFF;
   padding-bottom:10px;
+  margin-bottom:50px;
 }
 
 .open_artists_linked ul
@@ -1172,12 +1176,12 @@ h1.open_artists_name
 .open_artists_linked ul a 
 {
  background-color:#e6e6e6;
-  padding:5px;
-  color:#333;
-text-decoration:none;}
+ padding:5px;
+ color:#333;
+ text-decoration:none;}
 
-.open_artists_linked ul a:hover
-{
+ .open_artists_linked ul a:hover
+ {
   background-color:#000;
   color:#FFF;
 }
@@ -1185,10 +1189,11 @@ text-decoration:none;}
 
 ul.open_releases_nav_artwork
 {
-margin-left:170px;}
-.open_releases_nav_artwork li
-{
-  display:inline;
-  margin:2px;
-  padding:0px;
-}
+  margin-left:170px;}
+
+  .open_releases_nav_artwork li
+  {
+    display:inline;
+    margin:2px;
+    padding:0px;
+  }
