--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1160,9 +1160,12 @@ h1.open_artists_name
   width:220px;
   background-color:#FFF;
   padding-bottom:10px;
-  margin-bottom:50px;
 }
 
+.open_artists_listing_releases h2 
+{
+  margin-top:-25px;
+}
 .open_artists_linked ul
 {
   margin:-10px 0px 10px -10px;
