--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -93,13 +93,17 @@ html
   position:absolute;
   height:220px;
   width:220px;
-  margin-top:20px;
+ 
   background-image:url("../pics/releases/img-release.png");
 }
 
+.calque_releases
+{
+   margin-top:20px;
+}
 .calque_releases_2
 {
-  margin:0px;
+  margin-top:0px;
 }
 
 .calque_artwork
@@ -112,7 +116,9 @@ html
 .calque_artists_pictures
 {
   position:absolute;
-  border-radius:500px;
+/*  border-radius:500px;
+*/
+  border-radius:30px;
   height:460px;
   width:460px;
   background-image:url("../pics/releases/img-release.png");
@@ -1178,9 +1184,10 @@ h1.open_artists_name
 
 .open_artists_pictures img
 {
-  border-radius:500px;
   height:460px;
    width:460px;
+     border-radius:30px;
+
 }
 
 
@@ -1190,10 +1197,12 @@ h1.open_artists_name
   width:220px;
   background-color:#FFF;
   padding-bottom:10px;
-margin:10px;  
+margin:10px 10px 10px 10px;  
 float:left!important;
 }
 
+.open_artists_listing_releases img 
+{margin-top:-20px;}
 .open_artists_listing_releases h2 
 {
   margin-top:-25px;
